--- a/projects.css
+++ b/projects.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 .test {
 	background-color:  #190d50;
 	position: absolute;
