--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 
 .test {
-	background-color:#4C4E52;
+	background-color:#0a192f;
 	position: absolute;
 	top: 0px;
 	right: 0%;
