--- a/index.css
+++ b/index.css
@@ -2,25 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 
 .test {
-	background-color:#0a192f;
+	background-color:black;
 	position: absolute;
 	top: 0px;
 	right: 0%;
-	width: 1500px;
+	width: 1440px;
 	height: 660px;
 }
 
-#myVideo {
-	position: fixed;
-	right: 0px;
-	bottom:0px;
-	max-width: fit-content;
-	max-height: fit-content;
-	
-	
-	
-  }
-  
 h1  {
 	
 	font-family:'Poppins', sans-serif;
