--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 .test {
-	background-color: #190d50;
+	background-color: #black;
 	position: absolute;
 	top: 0px;
 	right: 0%;
