--- a/index.css
+++ b/index.css
@@ -342,8 +342,8 @@ a.four:link{
 	text-decoration:none;
 	border-style:solid;
 	padding:10px;
-	padding-top: 13px;
-	padding-bottom: 13px;
+	padding-top: 5px;
+	padding-bottom: 5x;
 	padding-right:18px;
 	padding-left:18px ;
 	border-color:  rgba(249, 205, 255, 0.829);
