--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ a.three:hover {
 }
 
 
-a.four:link{ 
+a.four:link{ /*linkedin*/
 	color: rgba(249, 205, 255, 0.829);
 	position:absolute;
 	top:500px;
@@ -214,7 +214,7 @@ a.four:hover {
 	transition: all 1s;
 }
 
-.five{
+.five{ /*facebook*/
 
 	color: rgba(249, 205, 255, 0.829);
 	position:absolute;
@@ -242,11 +242,11 @@ a.five:hover {
 	overflow: hidden;
 	transition: all 1s;
 }
-.six{
+.six{ /*github*/
 
 	color: rgba(249, 205, 255, 0.829);
 	position:absolute;
-	top:400px;
+	top:450px;
 	left:135px;
 	font-size: 15px;
 	font-weight: 10px;
@@ -271,11 +271,11 @@ a.six:hover {
 	transition: all 1s;
 }
 
-p6{
+p6{ /*gmail*/
 
 	color: rgba(249, 205, 255, 0.829);
 	position:absolute;
-	top:400px;
+	top:450px;
 	left:250px;
 	font-size: 15px;
 	font-weight: 10px;
