--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@
 h1  {
 	
 	font-family:'Poppins', sans-serif;
-	font-size: 60px;
+	font-size: 80px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
@@ -42,7 +42,7 @@ h1  {
 }
 h2{
 	font-family:'Poppins', sans-serif;
-	font-size: 60px;
+	font-size: 80px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
@@ -53,7 +53,7 @@ h2{
 }
 h2:hover{
 	font-family:'Poppins', sans-serif;
-	font-size: 60px;
+	font-size: 80px;
 	color: rgba(249, 205, 255, 0.875);
 	cursor: crosshair;
 	position: absolute;
@@ -63,19 +63,19 @@ h2:hover{
 }
 p1{ /*I am a*/
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 17px;
+	font-size: 25px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
 	left:123px;
 	top: 250px;
 	letter-spacing: 1px;
-	padding-right: 35%;
+	padding-right: 120px;
 	
 }	
 p2{ /* Freshman Information Technology student*/
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 17px;
+	font-size: 25px;
 	color:  rgba(249, 205, 255, 0.829);
 	cursor: crosshair;
 	position: absolute;
@@ -86,7 +86,7 @@ p2{ /* Freshman Information Technology student*/
 }
 p3{ /*my foundational skills*/
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 17px;
+	font-size: 25px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
@@ -101,7 +101,7 @@ p3{ /*my foundational skills*/
 }	
 p4{  /*at the Polytechnic University*/
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 17px;
+	font-size: 25px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
@@ -114,7 +114,7 @@ p4{  /*at the Polytechnic University*/
 }
 p5{ /*of the Philippines*/
 	font-family: 'Nunito Sans', sans-serif;
-	font-size: 17px;
+	font-size: 25px;
 	color: whitesmoke;
 	cursor: crosshair;
 	position: absolute;
