--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 .test {
 	background-color: #262c41;
 	position: absolute;
-	top: 0px;
-	right: 0%;
+	bottom:10px;
+	right: 10px;
 	width: 1530px;
 	height: 2030px;
 }
