--- a/index.css
+++ b/index.css
@@ -3,10 +3,9 @@
 
 
 .test {
-	background-color: #262c41;
+	background-color: #black;
 	position: absolute;
 	margin:0;
-	background-size: cover;
 	height: 100%;
 }
 @media only screen and (max-width:600px) {	
