--- a/index.css
+++ b/index.css
@@ -6,7 +6,10 @@
 	background-color: #black;
 	position: absolute;
 	margin:0;
-	height: 100%;
+	background-size:cover;
+
+
+
 }
 @media only screen and (max-width:600px) {	
 	.test {background:black;}			 
