--- a/index.css
+++ b/index.css
@@ -5,10 +5,8 @@
 .test {
 	background-color: #black;
 	position: absolute;
-	margin:0;
-	background-size:cover;
-	width:1000px;
-	height:1000px;
+	width:100%;
+	height:100%;
 
 
 
