--- a/index.css
+++ b/index.css
@@ -7,24 +7,16 @@
 	position: absolute;
 	top: 0px;
 	right: 0%;
-	width: 600px;
+	width: 479px;
 	height: 700px;
 }
-@media only screen and (max-width:600px) {	
-	.test {background:black;}			 
-}
-@media only screen and (min-width:600px) {	
-	.test {background:black;}			 
-}
-@media only screen and (min-width:768px) {	
-	.test {background:black;}			 
-}
-@media only screen and (min-width:992px) {	
-	.test {background:black;}			 
-}
-@media only screen and (min-width:1200px) {	
-	.test {background:black;}			 
-}
+@media only screen and (min-width: 320px) and (max-width: 479px){ .test }
+
+@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
+
+@media only screen and (min-width: 768px) and (max-width: 991px){ ... }
+
+@media only screen and (min-width: 992px){ ... }
 
 
   
