--- a/index.css
+++ b/index.css
@@ -10,9 +10,9 @@
 	width: 479px;
 	height: 700px;
 }
-@media only screen and (min-width: 320px) and (max-width: 479px){ .test }
+@media only screen and (min-width: 320px) and (max-width: 479px){  }
 
-@media only screen and (min-width: 480px) and (max-width: 767px){ ... }
+@media only screen and (min-width: 480px) and (max-width: 767px){ .test }
 
 @media only screen and (min-width: 768px) and (max-width: 991px){ ... }
 
